# BeSmart-ALM

./: .env.example  .gitignore  BSMART_ALM_ECOSYSTEM.md  COMANDOS_UTEIS.md  COMECE_AQUI.md  CORRECOES_WORK_ITEMS.md  FIX_ENUM_ARCHITECTURE.md  FIX_LOGIN_BUG.md  MVP_STATUS.md  Makefile  QUICKSTART.md  QUICK_START.md  README.md  RESTART_BACKEND.sh  START_COMPLETE_SYSTEM.sh  START_FRONTEND_DEV.sh  START_HERE.md  STOP_APP.sh  TEST_GUIDE.md  alembic.ini  bsmart_urls.txt  docker-compose.yml  ngrok_urls.txt  pyproject.toml  start_backend.sh  start_bsmart.sh  start_ngrok.sh  start_with_ngrok.sh  ✅_CORRECAO_APLICADA_AMBOS_USUARIOS.md  ✅_CORRECAO_CREATE_TENANT.md  ✅_CORRECAO_DELETE_TENANT_FK.md  ✅_CORRECAO_FINAL_ACME.md  ✅_CORRECAO_FINAL_PERMISSOES.md  ✅_CORRECAO_KANBAN_MENU.md  ✅_CORRECAO_SUPERADMIN.md  ✅_CORRECAO_SUPERADMINS_RECRIADOS.md  ✅_CORRECAO_SUPERUSER_ASSIGN_ROLES.md  ✅_CORRECAO_USER_ROLES_ODAIR.md  ✅_CORRECAO_VITE_HOSTS.md  ✅_CORRECOES_5_6_APLICADAS.md  (+55 more)
alembic/: README  env.py
bsmart-alm-plugin/: CHANGELOG.md  DISTRIBUICAO.md  GUIA_VISUAL_PAINEL.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  QUICK_START.md  README.md  RESUMO_EXECUTIVO.md  TESTE_FINAL.md  TESTE_RAPIDO.md  TROUBLESHOOTING.md  build-release.sh  fix-install.sh  install-painel.sh  install.sh  package-lock.json  package.json  update-plugin.sh  ✅_CHECKLIST_RAPIDO.md  ✅_PAINEL_LATERAL_PRONTO.md  ✅_PLUGIN_COMPLETO.md  ✅_PRONTO_PARA_DISTRIBUIR.md  ✅_V1.0.2_FINAL_CORRIGIDO.md  ✅_VERSAO_1.0.2_PRONTA.md  ✨_MELHORIAS_UX.md  🎉_IMPLEMENTACAO_COMPLETA.md  🎉_PAINEL_LATERAL_COMPLETO.md  🎊_VERSAO_FINAL.md  🎯_PAINEL_LATERAL.md  📦_RESUMO_PAINEL_LATERAL.md  🔧_CORRECAO_PROJETOS.md  🔧_CORRECOES_V1.0.2.md  🔧_REINSTALAR_PLUGIN.md  🚀_COMO_USAR.md  🚀_INSTALAR_V1.0.2.md
services/ai_orchestrator/: GUIA_TESTES.md  IMPLEMENTATION_STATUS.md  INTERFACES_GUIDE.md  QUICK_START.md  README.md  START_HERE.txt  TESTE_RAPIDO.md  TROUBLESHOOTING.md  __init__.py  config.yaml  debug_login_flow.py  debug_web_ui.py  pyproject.toml  reinstall.sh  setup.sh  start_cli.py  start_web.py  test_api_projects.py  test_endpoints.py  test_login_credentials.py  ✅_CORRECAO_ENDPOINT_PROJETOS.md  ✅_CORRECAO_LOGIN_API.md  ✅_CORRECAO_URL_COMPLETA.md  ✅_CORRECOES_FINAIS.md  ✅_CORRECOES_NOME_E_MODELO.md  ✅_CORRECOES_PROJETOS_E_PASTA.md  ✅_ESTRUTURA_CORRIGIDA.md  ✅_HTML_COMPLETO_ADICIONADO.md  ✅_LOGIN_FUNCIONANDO.md  ✅_LOGS_DETALHADOS_ADICIONADOS.md  ✅_MELHORIAS_V2_APLICADAS.md  ✅_RESUMO_CORRECOES_SESSAO.md  ✅_RESUMO_FINAL_SESSAO.md  ✅_SELECAO_WORK_ITEMS_CORRIGIDA.md  ✅_SELECT_PROJECT_CORRIGIDO.md  ✅_SESSAO_CORRECAO_COMPLETA.md  ✅_WORK_ITEMS_IMPLEMENTADO.md  ✨_SESSAO_COMPLETA.md  🎉_INTERFACES_IMPLEMENTADAS.md  🎉_SELECAO_FUNCIONANDO.md  (+24 more)
services/ai_orchestrator/ai_orchestrator/: __init__.py  cli.py  web_ui.py
services/ai_orchestrator/ai_orchestrator/agents/: __init__.py  aider.py  base.py  pool.py
services/ai_orchestrator/ai_orchestrator/api/: __init__.py  bsmart_client.py  git_manager.py
services/ai_orchestrator/ai_orchestrator/core/: __init__.py  models.py  queue_manager.py  task_router.py
services/ai_orchestrator/ai_orchestrator/static/: index.html
(+266 files in other folders)
